# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
scripts/: build-asan.sh  build-debug.sh  build.sh  run.sh
src/: main.cpp
